--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
+    <main>
+        <header>My Developer Skills</header>
+        <section>
+            <ul>
+
+            </ul>
+        </section>
+        <section>
+            
+        </section>
+    </main>
     
 </body>
 </html>
