--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
 </head>
 <body>
     <main>
-        <header>My Developer Skills</header>
-        <section>
-            <ul>
-
-            </ul>
-        </section>
-        <section>
-            
+        <table id="skills">
+            <thead>
+                <tr>
+                    <th>
+                        <header>My Developer Skills</header>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>    
+            </tbody>
+        </table>
+        <section id="input">
+            <input type="text">
+            <button id="add-skill">Add Skill</button>
         </section>
     </main>
     
